cicd-lab/jenkins/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jenkins
  namespace: jenkins
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: default
      sectionName: http
  hostnames:
    - "jenkins.gateway.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jenkins
          port: 8080
